# qbm

./: .coveragerc  .gitignore  .gitlab-ci.yml  LICENSE  README.md  conda-create-env.sh  environment-dev.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  qbm.html  qbm.models.html  qbm.simulation.html  qbm.utils.html  readme_link.html  search.html  searchindex.js
docs/html/_sources/: index.rst.txt  qbm.models.rst.txt  qbm.rst.txt
docs/source/: conf.py  modules.rst  qbm.metrics.rst  qbm.plotting.rst  qbm.rst  qbm.sampling.rst  qbm.simulation.rst  qbm.utils.rst
example/: qbm_example.ipynb
example/artifacts/: model_annealer.pkl  model_simulation.pkl
src/qbm/: __init__.py
src/qbm/models/: BQRBM.py  QBMBase.py  __init__.py
src/qbm/simulation/: __init__.py  simulation.py
src/qbm/utils/: __init__.py  discretization.py  misc.py  transformations.py
tests/unit/models/: test_BQRBM.py
tests/unit/utils/: test_discretization.py  test_misc.py  test_transformations.py
