[project]
name = "qbm"
version = "0.1.2"
authors = [
  {name="Cameron Perot"},
]
description = "A Python package for training and analyzing quantum Boltzmann machines"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "dwave-ocean-sdk>=4.2.0",
    "matplotlib>=3.4.3",
    "numpy>=1.20.3",
    "pandas>=1.3.3",
    "scipy>=1.7.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
    "pytest-cov",
    "python-language-server",
    "twine",
]
ipython = [
    "ipykernel",
    "ipython",
]

[project.urls]
Homepage = "https://github.com/cameronperot/qbm"
Documentation = "https://cameronperot.github.io/qbm/html/index.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 92

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --capture=no"
testpaths = [
    "tests",
]

[tool.flake8]
max-line-length = 92
extend-ignore = [
    "E203",
]
ignore = [
    "E501",
    "W503",
]
