[metadata]
name = qbm
author = Cameron Perot
url = https://github.com/cameronperot/qbm
version = attr: qbm.__version__
description = A Python package for training and analyzing quantum Boltzmann machines
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
classifiers =
  Development Status :: 4 - Beta
  Topic :: Scientific/Engineering
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[flake8]
max-line-length = 92
extend-ignore = E203
ignore = E501, W503
